--- a/css/tabs.css
+++ b/css/tabs.css
@@ -50,6 +50,10 @@
     padding-right: 12px;
 }
 
+.cmb2-options-page .cmb-tabs-wrap .cmb2-wrap .cmb2-metabox > .cmb-row:first-child {
+    margin-top: 1px;
+}
+
 .cmb-tabs-wrap .cmb2-wrap .cmb-row:not(.cmb-tab-active-item) {
     display: none;
 }
@@ -75,4 +79,9 @@
     float: none;
     border-right: none;
     border-bottom: 1px solid #eee;
+}
+
+/* Widget area */
+.widget-content .cmb-tabs-wrap {
+    margin: -1px -15px 0px -15px;
 }
